Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
6.3.0 Beta1
-
None
-
-
ef418a8d81 (qt/qtquick3d/dev) 15c7320c5f (qt/qtquick3d/6.3) e0a1430f84 (qt/qtquick3d/6.2) e0a1430f84 (qt/tqtc-qtquick3d/6.2) 15c7320c5f (qt/tqtc-qtquick3d/6.3) 15c7320c5f (qt/qtquick3d/6.3.0) 15c7320c5f (qt/tqtc-qtquick3d/6.3.0)
-
Qt Quick 3D: Week 7 - 8
Description
To reproduce add this to View3D node:
Component.onCompleted:
{ mapFrom3DScene(Qt.vector3d(-3.40282e+38, 3.40282e+38, 3.40282e+38)) }Error:
ASSERT: "divisor < 0 || divisor > 0" in file C:\Users\qt\work\install\include\QtGui/qvectornd.h, line 459
Attachments
For Gerrit Dashboard: QTBUG-100832 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
397272,4 | QQuick3DCamera::mapToViewport Don't divide by 0 or NaN | 6.2 | qt/qtquick3d | Status: MERGED | +2 | 0 |
397273,4 | QQuick3DCamera::mapToViewport Don't divide by 0 or NaN | 6.3 | qt/qtquick3d | Status: MERGED | +2 | 0 |
397324,3 | QQuick3DCamera::mapToViewport Don't divide by 0 or NaN | dev | qt/qtquick3d | Status: MERGED | +2 | 0 |