QQuick3DCamera::mapToViewport Don't divide by 0 or NaN

Most places we were already checking against dividing by 0, but when
trying to map really large numbers it's possible to hit situations where
you will try to divide by NaN instead. Now we check for that case as
well.

Fixes: QTBUG-100832
Change-Id: I8a2dc95675b1c275cd088f0e60c6e7d45beba8c7
Reviewed-by: Jonas Karlsson <jonas.karlsson@qt.io>
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>
(cherry picked from commit ef418a8d81a4127ae895ef02318eaef86c0a340f)
Reviewed-by: Christian Strømme <christian.stromme@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>